--- a/app/assets/stylesheets/media.css
+++ b/app/assets/stylesheets/media.css
@@ -37,11 +37,19 @@
   .search form {
     width: 100%;
   }
+
+  .favorites ul {
+    width: 700px;
+  }
+
+  .favorites li {
+    margin-right: 35px;
+  }
 }
 
 @media (max-width: 550px) {
   body {
-    /*background: red;*/
+    background: red;
   }
 
   .search, .gem-details-container {
@@ -54,6 +62,10 @@
 
   .search input {
     width: 92%;
+  }
+
+  .favorites ul {
+    flex-direction: column;
   }
 }
 
